--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             <div class="pause">停止<i class="fas fa-pause"></i></div>
           </div>
         </div>
+        <div id="header-img">
+          <img src="index-top.jpg">
+        </div>
         <div id="header-box">
           <div id="box-title"><h1>世界の果てまで、アットホーム</h1></div>
           <div id="box-link"><a href="#">Airbnbビジネスプログラムの動画を見る</a></div>
@@ -222,10 +225,10 @@
 
       <!-- section7 -->
       <section class="index-section section7 container-fluid">
-        <div class="gray py-3">
+        <div class="gray wssm py-3">
           <h1>働き方を変えたいなら、Airbnbです</h1>
           <div class="row main-bottom">
-            <div class="col-md-12 col-lg-12 col-xl-4 mx-auto">
+            <div class="col-sm-8 col-xl-4 mx-auto">
               <div id="main-bottom-form">
                 <p>まずは仕事用メールアドレスの入力から</p>
                 <input type="email" class="header-input" placeholder="email">
@@ -243,60 +246,60 @@
 
     <footer id="footer" class="container-fluid">
       <section class="row" id="footer-top">
-        <div class="col-md-12 col-lg-12 col-xl-3">
+        <div class="col-sm-12 col-lg-12 col-xl-3">
           <h1>企業情報</h1>
           <ul class="footer-ul row">
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">ダイバーシティ＆ビロンギング</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">アクセシビリティ対応</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">信頼＆安全</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">Airbnb Citizen</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">オリンピック</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">ニュースルーム</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">ダイバーシティ＆ビロンギング</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">アクセシビリティ対応</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">信頼＆安全</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">Airbnb Citizen</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">オリンピック</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">ニュースルーム</li>
           </ul>
         </div>
 
-        <div class="col-md-12 col-lg-12 col-xl-3">
+        <div class="col-sm-12 col-lg-12 col-xl-3">
           <h1>コミュニティ</h1>
           <ul class="footer-ul row">
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">Airbnb Magazine</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">Airbnbアソシエイト</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">Airbnbビジネスプログラム</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">お友達を招待</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">採用情報</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">Airbnb Magazine</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">Airbnbアソシエイト</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">Airbnbビジネスプログラム</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">お友達を招待</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">採用情報</li>
           </ul>
         </div>
 
-        <div class="col-md-12 col-lg-12 col-xl-3">
+        <div class="col-sm-12 col-lg-12 col-xl-3">
           <h1>ホスティング</h1>
           <ul class="footer-ul row">
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">お部屋を掲載</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">Host an online experience</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">Message from CEO Brian Chesky</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">責任あるホスティング</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">オープンホーム</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">リソースセンター</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">Community Center</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">お部屋を掲載</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">Host an online experience</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">Message from CEO Brian Chesky</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">責任あるホスティング</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">オープンホーム</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">リソースセンター</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">Community Center</li>
           </ul>
         </div>
 
-        <div class="col-md-12 col-lg-12 col-xl-3">
+        <div class="col-sm-12 col-lg-12 col-xl-3">
           <h1>サポート</h1>
           <ul class="footer-ul row">
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">Updates for COVID-19</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">ヘルプセンター</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">Cancellation options</li>
-            <li class="footer-list col-md-4 col-lg-4 col-xl-12">近隣コミュニティサポート</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">Updates for COVID-19</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">ヘルプセンター</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">Cancellation options</li>
+            <li class="footer-list col-sm-4 col-lg-4 col-xl-12">近隣コミュニティサポート</li>
           </ul>
         </div>
       </section>
 
       <section id="footer-bottom" class="row">
-        <div id="footer-tag" class="col-md-12 col-lg-12 col-xl-6 order-2 ">
+        <div id="footer-tag" class="col-sm-12 col-lg-12 col-xl-6 order-2 ">
           <a>Airbnb Global Services Limited<br>
             観光庁長官(01)第S0001号(2018年6月15日-2023年6月14日)</a>
           <p class="copyright">© 2020 Airbnb, Inc. All rights reserved.利用規約 · プライバシー · サイトマップ</p>
         </div>
-        <div id="footer-logo" class="col-md-12 col-lg-12 col-xl-6 order-1">
+        <div id="footer-logo" class="col-sm-12 col-lg-12 col-xl-6 order-1">
           <span>使用言語と地域を選択してください:日本語 (JP)</span>
           <span>￥ JPY</span>
           <span class="fab fa-facebook"></span>
