--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ja">
   <head>
     <meta charaset="utf-8">
-    <title>出張</title>
+    <title>Airbnb-Copy-Site2</title>
     <meta name="description" content="Home">
     <link rel="stylesheet" href="styles.css">
     <!-- レスポンシブ対応 -->
